--- a/WebDev/INVICTA/css/style.css
+++ b/WebDev/INVICTA/css/style.css
@@ -1,4 +1,13 @@
 @import url("https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap");
+root {
+  --purple: #cdb4db;
+  --blue: #669bbc;
+  --white: #fff;
+  --red: #c1121f;
+  --black: #000;
+  --yellow: #fcbf49;
+  --border: 0.2rem solid var(--black);
+}
 * {
   font-family: "Rubik", sans-serif;
   margin: 0;
@@ -7,4 +16,31 @@
   outline: none;
   border: none;
   text-decoration: none;
+}
+
+*::selection {
+  background-color: var(--purple);
+  color: var(--black);
+}
+
+html {
+  font-size: 150%;
+  overflow-x: hidden;
+  scroll-behavior: smooth;
+}
+
+section {
+  margin: 0 auto;
+  max-width: 250px;
+  padding: 2rem;
+}
+
+header {
+  position: sticky;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 1000;
+  border-bottom: var(--border);
+  background-color: var(--white);
 }
